Se modifoco index.html y se agrefo pag.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <div>
-        <h1>Wex2.0</h1>
+        <h1>Web 1.0 -> by Abraham Saenz</h1>
         <h2>Súper sitio web para compartir opiniones sobre cualquier tema</h2>
+	<p><a href="pag.html">Ir a página #2</a></p>
     </div>
 </body>
 </html>
